# simpleresumeagent

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: cover_letter_data.py  cover_letter_model.py  job_description_data.py  job_description_models.py  resume_data.py  resume_model.py
app/repositories/: cover_letter_repository.py  job_description_repository.py  resume_repository.py
app/routes/: cover_letter_routes.py  hello.py  job_description_routes.py  resume_routes.py
app/services/: browser_service.py  cover_letter_service.py  db_service.py  job_description_service.py  llm_extraction_service.py  pdf_service.py  rag_service.py  resume_service.py
